[package]
authors = ["Zhiquan Wang <wang4490@purdue.edu", "Zixun Yu <yu635@purdue.edu>"]
edition = "2021"
license = "GPL"
license-file = "LICENSE"
name = "luminar"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvml-wrapper = "0.8.0"
pretty-bytes = "0.2.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sysinfo = "0.27.1"
