[package]
authors = ["Zhiquan Wang <wang4490@purdue.edu", "Zixun Yu <yu635@purdue.edu>"]
categories = ["command-line-utilities"]
description = "Manage computing resources for multiple users on single machine."
edition = "2021"
homepage = "https://github.com/ZhiquanW/luminar/"
keywords = ["rust", "gpu"]
license-file = "LICENSE"
name = "luminar"
readme = "README.md"
repository = "https://github.com/ZhiquanW/luminar/"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "luminar"
path = "src/main.rs"

[dependencies]
nvml-wrapper = "0.8.0"
pretty-bytes = "0.2.2"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3.26"
sysinfo = "0.27.1"
threadpool = "1.8.1"
chrono = "0.4.23"
